[gd_scene load_steps=20 format=3 uid="uid://c5pxaov6df4yw"]

[ext_resource type="Texture2D" uid="uid://bt2l6o3tgni6n" path="res://sprite/character/Tuga-Sheet.png" id="1_antqy"]
[ext_resource type="Script" uid="uid://b46717m7x1f5n" path="res://script/tuga.gd" id="1_b5dlg"]
[ext_resource type="PackedScene" uid="uid://oe883hit4k47" path="res://scene/health_component.tscn" id="1_og3h1"]
[ext_resource type="Shader" uid="uid://bpstb077hykmf" path="res://shader/damage_flash.gdshader" id="2_gckpa"]
[ext_resource type="PackedScene" uid="uid://b236yas8wfjd" path="res://scene/weapon_component.tscn" id="2_k5jd2"]
[ext_resource type="PackedScene" uid="uid://dkkymdqija6rj" path="res://scene/bullet/bullet_tuga.tscn" id="4_r6lkd"]
[ext_resource type="PackedScene" uid="uid://4r33i08aifdq" path="res://scene/AI/ai_shoot_behaviour.tscn" id="5_teoyt"]
[ext_resource type="PackedScene" uid="uid://c5f1h0j03pxre" path="res://scene/target_raycast_check_2d.tscn" id="6_pvhdl"]
[ext_resource type="PackedScene" uid="uid://b8813j66n8scq" path="res://scene/damage_shader_player.tscn" id="7_lbuii"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbuii"]
resource_local_to_scene = true
shader = ExtResource("2_gckpa")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r6lkd"]
radius = 12.5
height = 46.0

[sub_resource type="Animation" id="Animation_lbuii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r6lkd"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_gckpa"]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3, 0.39999998, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AIShootBehaviour")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"weapon_component_shoot"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_idle_anim"
}]
}

[sub_resource type="Animation" id="Animation_xndra"]
resource_name = "die"
length = 0.75
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668, 0.33333334, 0.4, 0.46666667, 0.53333336, 0.6, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbuii"]
_data = {
&"RESET": SubResource("Animation_lbuii"),
&"die": SubResource("Animation_xndra"),
&"idle": SubResource("Animation_r6lkd"),
&"shoot": SubResource("Animation_gckpa")
}

[sub_resource type="Animation" id="Animation_vhm18"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pvhdl"]
resource_name = "damage_flash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xndra"]
_data = {
&"RESET": SubResource("Animation_vhm18"),
&"damage_flash": SubResource("Animation_pvhdl")
}

[node name="Tuga" type="StaticBody2D" groups=["enemy"]]
disable_mode = 1
script = ExtResource("1_b5dlg")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lbuii")
position = Vector2(0, -16)
texture = ExtResource("1_antqy")
hframes = 8
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_r6lkd")

[node name="WeaponComponent" parent="." node_paths=PackedStringArray("transformOverrides") instance=ExtResource("2_k5jd2")]
damage = 30
bulletAmount = 2
bulletSpeed = 250.0
bullet_scene = ExtResource("4_r6lkd")
shootCooldown = 0.0
transformOverrides = [NodePath("../ShootPosition1"), NodePath("../ShootPosition2")]

[node name="ShootPosition1" type="Marker2D" parent="."]
position = Vector2(-16, -27)

[node name="ShootPosition2" type="Marker2D" parent="."]
position = Vector2(16, -27)

[node name="TargetRaycastCheck2D" parent="." instance=ExtResource("6_pvhdl")]
position = Vector2(0, -13)

[node name="HealthComponent" parent="." instance=ExtResource("1_og3h1")]
unique_name_in_owner = true
max_hits = 3

[node name="AIShootBehaviour" parent="." node_paths=PackedStringArray("weapon_component", "target_raycast_check_2d", "root_node") instance=ExtResource("5_teoyt")]
shoot_cooldown = 3.2
cooldown_variation = 3.0
shoot_weapon_component = false
weapon_component = NodePath("../WeaponComponent")
target_raycast_check_2d = NodePath("../TargetRaycastCheck2D")
root_node = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lbuii")
}
autoplay = "idle"

[node name="DamageShaderPlayer" parent="." instance=ExtResource("7_lbuii")]
libraries = {
&"": SubResource("AnimationLibrary_xndra")
}

[connection signal="on_ai_shoot" from="AIShootBehaviour" to="." method="_on_ai_shoot_behaviour_on_ai_shoot"]
